<resources>
    <string name="app_name">Todo App</string>
    <string name="Welcome">Welcome in Todo App</string>
    <string name="Nama">Nama</string>
    <string name="Password">Password</string>
    <string name="MnNama">Masukkan Nama</string>
    <string name="MnPass">Masukkan Password</string>
    <string name="SignIn">SignIn</string>
    <string name="New">New to Todo App?</string>
    <string name="reg">Register</string>

    <string name="email">Email</string>
    <string name="MsEmail">Masukkan Email</string>
    <string name="rePass">Re-Password</string>

    <string name="SelDa">Selamat Datang</string>
    <string name="kamu">Kamu</string>
    <string name="task">Task</string>
    <string name="mskTask">Masukkan Task</string>
    <string name="JnsTask">Jenis Task</string>
    <string name="MskJenisTask">Masukkan Jenis Task</string>
    <string name="time">Time Task</string>
    <string name="MskTime">Masukkan Lama Task</string>

    <string name="TskKamu">Task Kamu</string>
    <string name="JnsTKamu">Jenis Task Kamu</string>
    <string name="TimeKamu">Time Task Kamu</string>

    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>